RESOLVED FIXED169314
Some platforms won't be able to create a GPUDevice
https://bugs.webkit.org/show_bug.cgi?id=169314
Summary Some platforms won't be able to create a GPUDevice
Dean Jackson
Reported 2017-03-07 15:21:36 PST
Not all hardware (or OS versions) support Metal.
Attachments
Patch (12.04 KB, patch)
2017-03-07 15:56 PST, Dean Jackson
jonlee: review+
Dean Jackson
Comment 1 2017-03-07 15:51:35 PST
Dean Jackson
Comment 2 2017-03-07 15:56:08 PST
Jon Lee
Comment 3 2017-03-07 16:02:07 PST
Comment on attachment 303738 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=303738&action=review > Tools/TestWebKitAPI/Tests/WebCore/mac/GPUDevice.mm:44 > + if (device) { Reverse the conditional and early return.
Dean Jackson
Comment 4 2017-03-07 16:12:15 PST
Note You need to log in before you can comment on or make changes to this bug.