Some platforms won't be able to create a GPUDevice https://bugs.webkit.org/show_bug.cgi?id=169314 <rdar://problems/30907521>

Reviewed by Jon Lee.

Source/JavaScriptCore:

Disable WEB_GPU on the iOS Simulator.

* Configurations/FeatureDefines.xcconfig:

Source/WebCore:

Protect for the case where the hardware doesn't support Metal. And
we might as well disable WebGPU completely in the iOS simulator
for now.

* Configurations/FeatureDefines.xcconfig:
* platform/graphics/cocoa/GPUDeviceMetal.mm:
(WebCore::GPUDevice::GPUDevice):
* platform/graphics/gpu/GPUDevice.cpp:
(WebCore::GPUDevice::create):

Source/WebCore/PAL:

Disable WEB_GPU on the iOS Simulator.

* Configurations/FeatureDefines.xcconfig:

Source/WebKit/mac:

Disable WEB_GPU on the iOS Simulator.

* Configurations/FeatureDefines.xcconfig:

Source/WebKit2:

Disable WEB_GPU on the iOS Simulator.

* Configurations/FeatureDefines.xcconfig:

Tools:

Protect for the case where the hardware doesn't support Metal.

* TestWebKitAPI/Configurations/FeatureDefines.xcconfig:
* TestWebKitAPI/Tests/WebCore/mac/GPUDevice.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/186309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213549 268f45cc-cd09-0410-ab3c-d52691b4dbfc